--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "nodemon -w src --ext ts --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "createdb": "node createdb.js"
+
   },
   "keywords": [],
   "author": "",
